# karaoke

./: .clang-format  .qmllint.ini  CMakeLists.txt  Main.qml  TelaBusca.qml  TelaPrincipal.qml  filehelper.cpp  filehelper.h  inihelper.cpp  inihelper.h  mudar_tom.txt  musica.h  readme.txt
icones/: icon.icns
src/: FormMain.qml  Formkaraoke.qml  TelaPrincipal.qml  filehelper.cpp  inihelper.cpp  main.cpp
src/helpers/: confighelper.cpp  confighelper.h  filehelper.cpp  filehelper.h  inihelper.cpp
src/ui/: FormConfig.qml  FormMain.qml  FormMessage.qml  FormSearch.qml  Formkaraoke.qml
